--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </nav>
     </header>
-
+    <div class="container_centrale">
     <div class="ms_sidebar">
       <div class="ms_sidebar_superiore">
         <nav class="nav_superiore">
@@ -104,6 +104,135 @@
         </nav>
       </div>
     </div>
+
+
+    <div class="ms_table">
+      <h2>Prossime classi</h2>
+      <table class="table table-hover table-responsive">
+        <thead>
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col">Data inizio</th>
+            <th scope="col">ROI</th>
+            <th scope="col">Stato</th>
+            <th scope="col">Azioni</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Classe 75</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>15 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-success">Done</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 76</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>16 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-success">Done</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 77</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>17 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-warning">process</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 78</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>18 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-success">Done</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 79</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>19 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-danger">failed</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 80</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>20 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-success">Done</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 81</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>21 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-danger">failed</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+                <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Classe 82</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>22 Feb 2021</td>
+            <td>20%</td>
+            <td><button type="button" class="btn btn-success">Done</button></td>
+            <td> <a href=""><i class="fa-solid fa-pencil" style="color: #c0c0c0;"></i></a>
+            <a href=""><i class="fa-solid fa-trash" style="color: #c0c0c0;"></i></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
