--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </header>
 
     <div class="container_centrale">
-      <div class="ms_sidebar">
+      <div class="ms_sidebar col-12">
         <div class="ms_sidebar_superiore">
           <nav class="nav_superiore">
             <ul>
@@ -112,8 +112,23 @@
 
       <div class="ms_container_centrale">
         <div class="container-fluid">
+          <div class="row ms_row_blu">
+            <div class="col-lg-6 col-md-12">
+              <h1>Boolean</h1>
+
+            </div>
+            <div class="col-lg-3 col-md-12">
+              <p>Studenti online negli ultimi 30 minuti</p>
+              <h2>125</h2>
+
+            </div>
+            <div class="col-lg-3 col-md-12">
+              <p>Nuovo studente<i class="fa-regular fa-square-plus fa-2xl" style="color: #ffffff;"></i></p>
+
+            </div>
+          </div>
           <div class="row">
-            <div class="col-lg-8 col-md-12">
+            <div class="col-lg-8 col-md-12 ms_container_new">
                 <h2>Prossime classi</h2>
                 <table class="table table-hover table-responsive">
                   <thead>
@@ -319,7 +334,7 @@
                 </table>
               </div>
     
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-12 ms_container_new">
                     <h2>Todo</h2>
                     <div class="checkbox_todo">
                       <div class="form-check">
@@ -362,112 +377,129 @@
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-md-12 ms_container_new">
+                  <h2>F.A.Q.</h2>
+                  <div class="ms_table accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h3 class="accordion-header" id="headingOne">
+                        <button
+                          class="accordion-button"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseOne"
+                          aria-expanded="true"
+                          aria-controls="collapseOne"
+                        >
+                          Come aggiungere un nuovo studente?
+                        </button>
+                      </h3>
+                      <div
+                        id="collapseOne"
+                        class="accordion-collapse collapse show"
+                        aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          <strong>This is the first item's accordion body.</strong> It
+                          is shown by default, until the collapse plugin adds the
+                          appropriate classes that we use to style each element. These
+                          classes control the overall appearance, as well as the showing
+                          and hiding via CSS transitions. You can modify any of this
+                          with custom CSS or overriding our default variables. It's also
+                          worth noting that just about any HTML can go within the
+                          <code>.accordion-body</code>, though the transition does limit
+                          overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h3 class="accordion-header" id="headingTwo">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseTwo"
+                          aria-expanded="false"
+                          aria-controls="collapseTwo"
+                        >
+                          Come posso accedere alle informazioni del mio account?
+                        </button>
+                      </h3>
+                      <div
+                        id="collapseTwo"
+                        class="accordion-collapse collapse"
+                        aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          <strong>This is the second item's accordion body.</strong>
+                          It is hidden by default, until the collapse plugin adds the
+                          appropriate classes that we use to style each element. These
+                          classes control the overall appearance, as well as the showing
+                          and hiding via CSS transitions. You can modify any of this
+                          with custom CSS or overriding our default variables. It's also
+                          worth noting that just about any HTML can go within the
+                          <code>.accordion-body</code>, though the transition does limit
+                          overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h3 class="accordion-header" id="headingThree">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseThree"
+                          aria-expanded="false"
+                          aria-controls="collapseThree"
+                        >
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h3>
+                      <div
+                        id="collapseThree"
+                        class="accordion-collapse collapse"
+                        aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          <strong>This is the third item's accordion body.</strong> It
+                          is hidden by default, until the collapse plugin adds the
+                          appropriate classes that we use to style each element. These
+                          classes control the overall appearance, as well as the showing
+                          and hiding via CSS transitions. You can modify any of this
+                          with custom CSS or overriding our default variables. It's also
+                          worth noting that just about any HTML can go within the
+                          <code>.accordion-body</code>, though the transition does limit
+                          overflow.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 ms_container_new_stats">
+                  <img src="stats.jpeg" alt="">
+                  <h3>Utenti attivi</h3>
+                  <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                  <ul class="list-group">
+                    <li class="list-group-item">Gennaio: 1200</li>
+                    <li class="list-group-item">Febbraio: 800</li>
+                    <li class="list-group-item">Marzo: 1500</li>
+                    <li class="list-group-item"><a href="">Visualizza report approfondito</a></li>
+
+                  </ul>
+
+                </div>
+
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="ms_table">
-          <h2>F.A.Q.</h2>
-          <div class="ms_table accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h3 class="accordion-header" id="headingOne">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne"
-                  aria-expanded="true"
-                  aria-controls="collapseOne"
-                >
-                  Come aggiungere un nuovo studente?
-                </button>
-              </h3>
-              <div
-                id="collapseOne"
-                class="accordion-collapse collapse show"
-                aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It
-                  is shown by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h3 class="accordion-header" id="headingTwo">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo"
-                  aria-expanded="false"
-                  aria-controls="collapseTwo"
-                >
-                  Come posso accedere alle informazioni del mio account?
-                </button>
-              </h3>
-              <div
-                id="collapseTwo"
-                class="accordion-collapse collapse"
-                aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong>
-                  It is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h3 class="accordion-header" id="headingThree">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree"
-                  aria-expanded="false"
-                  aria-controls="collapseThree"
-                >
-                  Posso usare questa dashboard da mobile?
-                </button>
-              </h3>
-              <div
-                id="collapseThree"
-                class="accordion-collapse collapse"
-                aria-labelledby="headingThree"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
