push per ticket

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 ms_container_new_stats">
+                <div class="col-lg-4 col-md-12 ms_container_new_stats ms_container_new">
                   <img src="stats.jpeg" alt="">
                   <h3>Utenti attivi</h3>
                   <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
