--- a/index.html
+++ b/index.html
@@ -120,12 +120,198 @@
               <h2>125</h2>
             </div>
             <div class="col-lg-3 col-md-12">
-              <p>
-                Nuovo studente<i
+              <button
+                class="btn btn-primary"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasRight"
+                aria-controls="offcanvasRight"
+              >
+                Nuovo Studente
+                <i
                   class="fa-regular fa-square-plus fa-2xl"
                   style="color: #ffffff"
                 ></i>
-              </p>
+              </button>
+
+              <div
+                class="offcanvas offcanvas-end"
+                tabindex="-1"
+                id="offcanvasRight"
+                aria-labelledby="offcanvasRightLabel"
+              >
+                <div class="offcanvas-header">
+                  <h5 id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
+                  <button
+                    type="button"
+                    class="btn-close text-reset"
+                    data-bs-dismiss="offcanvas"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="offcanvas-body">
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Nome</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Cognome</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Email</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Password</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Indirizzo</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >Città</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <label for="inputState" class="form-label">Stato</label>
+                        <select id="inputState" class="form-select">
+                          <option selected>Scegli..</option>
+                          <option>Italia</option>
+                          <option>USA</option>
+                          <option>Spagna</option>
+                        </select>
+                      </div>
+                      <div class="col-2">
+                        <div class="mb-3">
+                          <label for="formGroupExampleInput" class="form-label"
+                            >CAP</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="formGroupExampleInput"
+                            placeholder=""
+                          />
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-12">
+                        <h6>Foto</h6>
+                        <div class="mb-3">
+                          <input
+                            type="file"
+                            class="form-control"
+                            aria-label="file example"
+                            required
+                          />
+                          <div class="invalid-feedback">
+                            Example invalid form file feedback
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-12">
+                          <div class="form-check">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="flexCheckDefault"
+                            />
+                            <label
+                              class="form-check-label"
+                              for="flexCheckDefault"
+                            >
+                              Seleziona per proseguire
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-12">
+                          <button type="button" class="btn btn-primary">
+                            Salva
+                          </button>
+                          <button type="button" class="btn btn-warning">
+                            Svuota
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
